--- a/src/book-now/book-now.scss
+++ b/src/book-now/book-now.scss
@@ -1,11 +1,11 @@
-.order-now {
+.book-now {
   width: 80%;
   margin: 40px auto;
   form {
     text-align: left;
     max-width: 800px;
     width: 40%;
-    .order-now__form__text {
+    .book-now__form__text {
       margin: 10px 0px auto;
     }
 
@@ -25,7 +25,7 @@
     }
   };
 
-  .order-now__form__submit {
+  .book-now__form__submit {
     margin: 10px auto;
     float: left;
   }
