Added validations & date formatting to order form

--- a/src/book-now/book-now.scss
+++ b/src/book-now/book-now.scss
@@ -1,16 +1,19 @@
 .book-now {
   width: 80%;
   margin: 40px auto;
-  form {
+  .book-now__form {
     text-align: left;
     max-width: 800px;
-    width: 40%;
+    width: 50%;
     .book-now__form__text {
       margin: 10px 0px auto;
     }
+    .error-message {
+      color: red;
+      font-size: .8rem
+    }
 
-
-    input {
+    input, textarea {
       margin: 10px auto;
       height: 30px;
       border-radius: 4px;
