--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -53,6 +53,27 @@ p {
   line-height: 1.5em;
 }
 
+input, text, span {
+  font-size: .8rem;
+  font-weight: 300;
+  white-space: pre-wrap;
+  letter-spacing: .1em;
+  color: #333333;
+  line-height: 1.5em;
+  padding: .2em 1em
+}
+
+textarea {
+  font-size: .8rem;
+  font-weight: 300;
+  white-space: pre-wrap;
+  letter-spacing: .08em;
+  color: #333333;
+  line-height: 1.5em;
+  padding: .5em 1em;
+
+}
+
 a {
 
 }
