--- a/src/book-now/book-now.scss
+++ b/src/book-now/book-now.scss
@@ -37,6 +37,17 @@
   margin: auto 0px;
 
   .information-form {
+
+    span {
+      font-size: .8rem;
+      font-weight: 300;
+      white-space: pre-wrap;
+      letter-spacing: .1em;
+      color: #3D3D3D;
+      line-height: 1.5em;
+      padding: .2em 1em
+    }
+
     .information-form__section {
       text-align: left;
       margin: 20px auto;
@@ -73,5 +84,20 @@
       font-weight: 400;
       line-height: 1em;
     }
+  }
+}
+
+.loading-wrapper {
+  // background-color: #CFCFCF;
+  // opacity: .6;
+  position: relative;
+  width: 100%;
+  height: 50px;
+  top: 0;
+  left: 0;
+  .loading-wrapper__spinner {
+    margin: auto;
+    top: 50%;
+    transform: translateY(-50%);
   }
 }
