--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -58,7 +58,7 @@ p {
   line-height: 1.6em;
 }
 
-input, text, span {
+input, text {
   font-size: .8rem;
   font-weight: 300;
   white-space: pre-wrap;
@@ -67,6 +67,8 @@ input, text, span {
   line-height: 1.5em;
   padding: .2em 1em
 }
+
+
 
 textarea {
   font-size: .8rem;
