--- a/src/book-now/book-now.scss
+++ b/src/book-now/book-now.scss
@@ -14,6 +14,7 @@
     }
 
     input, textarea {
+
       margin: 10px auto;
       height: 30px;
       border-radius: 4px;
@@ -72,7 +73,9 @@
       vertical-align: middle;
       font-size: 1.2rem;
       letter-spacing: .08em;
-      line-height: 1em
+      line-height: 1em;
+
+
 
     }
 
@@ -88,8 +91,6 @@
 }
 
 .loading-wrapper {
-  // background-color: #CFCFCF;
-  // opacity: .6;
   position: relative;
   width: 100%;
   height: 50px;
