--- a/src/c2a/c2a.scss
+++ b/src/c2a/c2a.scss
@@ -22,12 +22,10 @@
     border-radius: 50%;
     right: 15%;
     bottom: 10%;
-    .c2a__focus__title {
+    .c2a__focus__title, .c2a__focus__caption {
       margin: 5% auto;
     }
-    .c2a__focus__caption {
-      margin: 5% auto;
-    }
+
     .c2a__focus__btn {
       margin: 5% auto auto;
     }
