remove App.js and switch to landingpage.js '

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -2,6 +2,7 @@ h1, h2  {
   font-family: 'Lato', sans-serif;
   font-variant-ligatures: no-common-ligatures;
   text-rendering: optimizeLegibility;
+  text-align: center;
 }
 
  h3, h4, h5, a, button, p {
