--- a/src/c2a/c2a.scss
+++ b/src/c2a/c2a.scss
@@ -3,6 +3,7 @@
   background-repeat: no-repeat;
   background-size: 100vw;
   height: calc(.5469 * 100vw);//.5469 is the height ratio of the bacgkround img //calc(100vh - 90px); //90 is the height of the header
+  max-height: calc(100vh);
   position: relative;
   .c2a__background-img {
     position: absolute;
@@ -22,6 +23,7 @@
     border-radius: 50%;
     right: 15%;
     bottom: 10%;
+    text-align: center;
     .c2a__focus__title, .c2a__focus__caption {
       margin: 5% auto;
     }
