--- a/src/book-now/book-now.scss
+++ b/src/book-now/book-now.scss
@@ -1,104 +1,58 @@
 .book-now {
   margin: 40px auto;
+  .book-now__contact {
+    margin: auto 0px;
 
-  .book-now__form {
-    text-align: left;
-    max-width: 800px;
-    width: 30vw;
-    .book-now__form__text {
-      margin: 10px 0px auto;
-    }
-    .error-message {
-      color: red;
-      font-size: .8rem
-    }
+    .book-now__contact__information-form {
 
-    input, textarea {
+      span {
+        font-size: .8rem;
+        font-weight: 300;
+        white-space: pre-wrap;
+        letter-spacing: .1em;
+        color: #3D3D3D;
+        line-height: 1.5em;
+        padding: .2em 1em
+      }
 
-      margin: 10px auto;
-      height: 30px;
-      border-radius: 4px;
-      border: 1px solid #B3B3B3;
+      .book-now__contact__information-form__section {
+        text-align: left;
+        margin: 20px auto;
 
-      width: 100%;
+        .book-now__contact__information-form__section__img {
+          vertical-align: middle;
+          &.is-mail {
+            width: 30px
+          }
+          &.is-phone {
+            width: 20px;
+            margin-left: 5px;
+          }
+        }
+      }
+      .book-now__contact__information-form__text {
+        text-align: left;
+        padding: 0px;
+        margin-left: 20px;
+        color: #3D3D3D;
+        font-weight: 300;
+        vertical-align: middle;
+        font-size: 1.2rem;
+        letter-spacing: .08em;
+        line-height: 1em;
 
-      &.is-message {
 
-        height: 100px;
+
+      }
+
+      .book-now__contact__information-form__subtext {
+        margin: 10px auto 10px 50px;
+        text-align: left;
+        font-size: .8rem;
+        letter-spacing: .05em;
+        font-weight: 400;
+        line-height: 1em;
       }
     }
-  };
-
-  .book-now__form__submit {
-    margin: 10px auto;
-    float: left;
   }
 };
-.contact {
-  margin: auto 0px;
-
-  .information-form {
-
-    span {
-      font-size: .8rem;
-      font-weight: 300;
-      white-space: pre-wrap;
-      letter-spacing: .1em;
-      color: #3D3D3D;
-      line-height: 1.5em;
-      padding: .2em 1em
-    }
-
-    .information-form__section {
-      text-align: left;
-      margin: 20px auto;
-
-      .information-form__section__img {
-        vertical-align: middle;
-        &.is-mail {
-          width: 30px
-        }
-        &.is-phone {
-          width: 20px;
-          margin-left: 5px;
-        }
-      }
-    }
-    .information-form__text {
-      text-align: left;
-      padding: 0px;
-      margin-left: 20px;
-      color: #3D3D3D;
-      font-weight: 300;
-      vertical-align: middle;
-      font-size: 1.2rem;
-      letter-spacing: .08em;
-      line-height: 1em;
-
-
-
-    }
-
-    .information-form__subtext {
-      margin: 10px auto 10px 50px;
-      text-align: left;
-      font-size: .8rem;
-      letter-spacing: .05em;
-      font-weight: 400;
-      line-height: 1em;
-    }
-  }
-}
-
-.loading-wrapper {
-  position: relative;
-  width: 100%;
-  height: 50px;
-  top: 0;
-  left: 0;
-  .loading-wrapper__spinner {
-    margin: auto;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-}
