--- a/src/shared/header/header.scss
+++ b/src/shared/header/header.scss
@@ -3,6 +3,7 @@
   z-index: 2;
   height: 90px;
   position: fixed;
+  -webkit-backface-visibility: hidden;
   background: white;
   width: 100%;
   //border-bottom: 1px solid #d9d9d9;
