--- a/src/book-now/google-map/google-map.scss
+++ b/src/book-now/google-map/google-map.scss
@@ -1,7 +1,8 @@
 .google-map-wrapper {
-  width: 350px;
+  width: 400px;
   max-width: 90%;
-  height: 20vw;
+  height: 300px;
+  max-height: 90%;
   margin: auto 0px;
   .google-map {
     margin: inherit;
